--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
 
   <div class="bgimg">
     <div class="topleft">
-      <p>Logo</p>
+      <p>Salt Rain Cafe</p>
     </div>
     <div class="middle">
       <h1>COMING SOON</h1>
       <hr>
-      <p>35 days left</p>
+      <p>20 days left</p>
     </div>
     <div class="bottomleft">
-      <p>Some text</p>
+      <p><a href="https://www.xeontechnology.ltd" target="_blank">Powerd By Xeon Technology Limited</a></p>
     </div>
   </div>
 
