--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <p>20 days left</p>
     </div>
     <div class="bottomleft">
-      <p><a href="https://www.xeontechnology.ltd" target="_blank">Powerd By Xeon Technology Limited</a></p>
+      <p style="color:lightgray; font-size:8px"><a href="https://www.xeontechnology.ltd" target="_blank">Powerd By Xeon Technology Limited</a></p>
     </div>
   </div>
 
